[gd_scene load_steps=54 format=2]

[ext_resource path="res://assets/Fonts_v2/Ledger/Ledger-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/Textures_v2/MANSION/Sex/Buttons/button_charlist_hover.png" type="Texture" id=2]
[ext_resource path="res://assets/Textures_v2/MANSION/Sex/Buttons/button_charlist_pressed.png" type="Texture" id=3]
[ext_resource path="res://assets/Textures_v2/MANSION/Sex/Buttons/button_charlist.png" type="Texture" id=4]
[ext_resource path="res://assets/Textures_v2/CHEATS/panel_cheats.png" type="Texture" id=5]
[ext_resource path="res://assets/Fonts_v2/FontThemes/MainMiddle.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/Textures_v2/CHEATS/button_cheats_hover.png" type="Texture" id=7]
[ext_resource path="res://assets/Textures_v2/CHEATS/button_cheats_pressed.png" type="Texture" id=8]
[ext_resource path="res://assets/Textures_v2/CHEATS/button_cheats.png" type="Texture" id=9]
[ext_resource path="res://assets/Fonts_v2/PT_Sans/PTSans-Regular.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://gui_modules/Universal/Scripts/CheatsModule.gd" type="Script" id=11]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/VScrollBar.tres" type="Theme" id=12]
[ext_resource path="res://gui_modules/Universal/Scripts/ClassesModule.gd" type="Script" id=13]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/NonDecorButton_with_Font.tres" type="Theme" id=14]
[ext_resource path="res://assets/images/gui/universal/skill_frame.png" type="Texture" id=15]
[ext_resource path="res://assets/Textures_v2/CHEATS/buttonbig_cheats.png" type="Texture" id=16]
[ext_resource path="res://assets/Textures_v2/CHEATS/buttonbig_cheats_hover.png" type="Texture" id=17]
[ext_resource path="res://assets/Textures_v2/CHEATS/buttonbig_cheats_pressed.png" type="Texture" id=18]
[ext_resource path="res://assets/Fonts_v2/FontThemes/MainSmallBold.tres" type="DynamicFont" id=19]
[ext_resource path="res://assets/Fonts_v2/PT_Sans/PT_30.tres" type="DynamicFont" id=20]
[ext_resource path="res://assets/Themes_v2/EmptyTexture.tres" type="StyleBox" id=21]
[ext_resource path="res://assets/Textures_v2/back_charinfo.png" type="Texture" id=22]
[ext_resource path="res://assets/Themes_v2/CHAR_CREATION/Button_Colored_Pressed.tres" type="StyleBox" id=23]
[ext_resource path="res://assets/Themes_v2/CHAR_INFO/CHI_List_Buttons.tres" type="Theme" id=24]
[ext_resource path="res://assets/Themes_v2/CHAR_INFO/CHI_CLASSES.tres" type="Theme" id=25]
[ext_resource path="res://assets/images/gui/universal/skill_frame_hover.png" type="Texture" id=26]
[ext_resource path="res://assets/images/iconsclasses/Sex_Toy.png" type="Texture" id=27]
[ext_resource path="res://assets/images/gui/universal/skill_frame_pressed.png" type="Texture" id=28]
[ext_resource path="res://assets/Textures_v2/CHAR_INFO old/Panels/panel_slavedetails.png" type="Texture" id=29]
[ext_resource path="res://assets/Themes_v2/CHAR_CREATION/Button_Colored_Hover.tres" type="StyleBox" id=30]
[ext_resource path="res://assets/Themes_v2/CHAR_CREATION/Button_Colored_Normal.tres" type="StyleBox" id=31]
[ext_resource path="res://assets/images/raceshades/Human_M.png" type="Texture" id=32]
[ext_resource path="res://assets/Themes_v2/CHAR_CREATION/ChC_Middle_Panel.tres" type="StyleBox" id=33]
[ext_resource path="res://gui_modules/Universal/Scripts/CheatRaceChange.gd" type="Script" id=34]
[ext_resource path="res://assets/Textures_v2/CITY/Buttons/buttonbig_city.png" type="Texture" id=35]
[ext_resource path="res://assets/Textures_v2/CITY/Buttons/buttonbig_city_pressed.png" type="Texture" id=36]
[ext_resource path="res://assets/Textures_v2/CITY/Buttons/buttonbig_city_hover.png" type="Texture" id=37]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/PT_24_Label.tres" type="Theme" id=38]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/Ledger_30.tres" type="DynamicFont" id=39]
[ext_resource path="res://assets/Textures_v2/MANSION/CharacterList/Buttons/button_charlist_hover.png" type="Texture" id=40]
[ext_resource path="res://assets/Textures_v2/Universal/Bars/scrollbar_horizontal_detail.png" type="Texture" id=41]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/HSliderBG.tres" type="StyleBox" id=42]
[ext_resource path="res://src/scenes/NumberSelection.gd" type="Script" id=43]
[ext_resource path="res://assets/Textures_v2/CITY/Panels/panel_reputationshop.png" type="Texture" id=44]
[ext_resource path="res://assets/Textures_v2/MANSION/CharacterList/Buttons/button_charlist_pressed.png" type="Texture" id=45]
[ext_resource path="res://assets/Textures_v2/MANSION/CharacterList/Buttons/button_charlist.png" type="Texture" id=46]

[sub_resource type="DynamicFont" id=1]
size = 36
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 26
use_filter = true
font_data = ExtResource( 10 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 29 )
region_rect = Rect2( 0, 0, 970, 920 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 22 )
region_rect = Rect2( 0, 0, 1920, 1080 )

[sub_resource type="DynamicFont" id=6]
size = 32
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 24
font_data = ExtResource( 10 )

[node name="CheatsModule" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 368.0
margin_top = 139.0
margin_right = -367.0
margin_bottom = -141.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
margin_left = 3.05176e-05
margin_right = 1185.0
margin_bottom = 800.0
texture = ExtResource( 5 )

[node name="Title" type="Label" parent="."]
margin_left = 3.05176e-05
margin_right = 1185.0
margin_bottom = 84.0
custom_colors/font_color = Color( 0.960784, 1, 0.223529, 1 )
custom_fonts/font = SubResource( 1 )
text = "Cheats"
align = 1
valign = 1

[node name="CharsScroll" type="ScrollContainer" parent="."]
margin_left = 433.0
margin_top = 100.0
margin_right = 773.0
margin_bottom = 776.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CharsScroll"]

[node name="Button" type="TextureButton" parent="CharsScroll/VBoxContainer"]
visible = false
margin_right = 340.0
margin_bottom = 52.0
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 2 )

[node name="Name" type="Label" parent="CharsScroll/VBoxContainer/Button"]
margin_left = 57.0
margin_top = 7.0
margin_right = 328.0
margin_bottom = 45.0
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_fonts/font = ExtResource( 6 )
text = "Char Name"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="CharsScroll/VBoxContainer/Button"]
margin_left = 7.0
margin_top = 7.0
margin_right = 45.0
margin_bottom = 45.0
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftSide" type="ScrollContainer" parent="."]
margin_left = 24.0
margin_top = 107.0
margin_right = 392.0
margin_bottom = 764.0
theme = ExtResource( 12 )

[node name="VBoxContainer" type="VBoxContainer" parent="LeftSide"]
custom_constants/separation = 56
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureButton" parent="LeftSide/VBoxContainer"]
visible = false
margin_right = 350.0
margin_bottom = 60.0
rect_min_size = Vector2( 350, 60 )
texture_normal = ExtResource( 35 )
texture_pressed = ExtResource( 36 )
texture_hover = ExtResource( 37 )
expand = true

[node name="Label" type="Label" parent="LeftSide/VBoxContainer/Button"]
margin_left = 15.0
margin_right = 331.0
margin_bottom = 60.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = SubResource( 2 )
text = "Hand of Midas"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Descript" type="Label" parent="LeftSide/VBoxContainer/Button"]
visible = false
margin_top = 70.0
margin_right = 356.0
margin_bottom = 105.0
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_fonts/font = SubResource( 3 )
text = "Adds 5000 gold and 10000 food"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightSide" type="ScrollContainer" parent="."]
margin_left = 830.443
margin_top = 92.0
margin_right = 1144.44
margin_bottom = 768.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="RightSide"]

[node name="Button" type="TextureButton" parent="RightSide/VBoxContainer"]
visible = false
margin_right = 314.0
margin_bottom = 40.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 7 )
texture_disabled = ExtResource( 8 )

[node name="Name" type="Label" parent="RightSide/VBoxContainer/Button"]
margin_right = 314.0
margin_bottom = 39.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 6 )
text = "Cheat"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClassesModule" type="Panel" parent="."]
visible = false
light_mask = 0
margin_left = 116.768
margin_right = 1086.77
margin_bottom = 920.0
theme = ExtResource( 25 )
custom_styles/panel = SubResource( 4 )
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="ClassesModule"]
show_behind_parent = true
light_mask = 0
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 970, 920 )
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="ClassesModule"]
light_mask = 0
margin_left = 2.0
margin_top = 12.0
margin_right = 968.0
margin_bottom = 57.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = SubResource( 6 )
text = "Classes"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="categories" type="VBoxContainer" parent="ClassesModule"]
light_mask = 0
margin_left = 33.2982
margin_top = 64.0
margin_right = 143.298
margin_bottom = 478.0
theme = ExtResource( 24 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="all" type="Button" parent="ClassesModule/categories"]
light_mask = 0
margin_right = 109.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
hint_tooltip = "Hint"
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = SubResource( 7 )
toggle_mode = true
text = "All"

[node name="social" type="Button" parent="ClassesModule/categories"]
light_mask = 0
margin_top = 44.0
margin_right = 109.0
margin_bottom = 84.0
rect_min_size = Vector2( 0, 40 )
hint_tooltip = "Social"
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = SubResource( 7 )
toggle_mode = true
text = "Soc"

[node name="labor" type="Button" parent="ClassesModule/categories"]
light_mask = 0
margin_top = 88.0
margin_right = 109.0
margin_bottom = 128.0
rect_min_size = Vector2( 0, 40 )
hint_tooltip = "Labor"
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = SubResource( 7 )
toggle_mode = true
text = "Lab"

[node name="sexual" type="Button" parent="ClassesModule/categories"]
light_mask = 0
margin_top = 132.0
margin_right = 109.0
margin_bottom = 172.0
rect_min_size = Vector2( 0, 40 )
hint_tooltip = "Sexuals"
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = SubResource( 7 )
toggle_mode = true
text = "Sex"

[node name="combat" type="Button" parent="ClassesModule/categories"]
light_mask = 0
margin_top = 176.0
margin_right = 109.0
margin_bottom = 216.0
rect_min_size = Vector2( 0, 40 )
hint_tooltip = "Combat"
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = SubResource( 7 )
toggle_mode = true
text = "Com"

[node name="magic" type="Button" parent="ClassesModule/categories"]
light_mask = 0
margin_top = 220.0
margin_right = 109.0
margin_bottom = 260.0
rect_min_size = Vector2( 0, 40 )
hint_tooltip = "Magic"
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = SubResource( 7 )
toggle_mode = true
text = "Mag"

[node name="ScrollContainer" type="ScrollContainer" parent="ClassesModule"]
light_mask = 0
margin_left = 159.842
margin_top = 64.0
margin_right = 909.842
margin_bottom = 814.0
rect_min_size = Vector2( 0, 760 )
theme = ExtResource( 12 )
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="ClassesModule/ScrollContainer"]
light_mask = 0
columns = 5

[node name="Button" type="TextureButton" parent="ClassesModule/ScrollContainer/GridContainer"]
visible = false
self_modulate = Color( 1, 1, 1, 0.635294 )
light_mask = 0
margin_right = 150.0
margin_bottom = 150.0
rect_min_size = Vector2( 150, 150 )
toggle_mode = true
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 26 )
texture_hover = ExtResource( 28 )
expand = true

[node name="icon" type="TextureRect" parent="ClassesModule/ScrollContainer/GridContainer/Button"]
show_behind_parent = true
light_mask = 0
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 150, 150 )
texture = ExtResource( 27 )
expand = true

[node name="name" type="Label" parent="ClassesModule/ScrollContainer/GridContainer/Button"]
light_mask = 0
margin_left = 5.0
margin_top = 118.0
margin_right = 147.0
margin_bottom = 145.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
custom_fonts/font = ExtResource( 19 )
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ClassesModule"]
margin_left = 33.2982
margin_top = 859.0
margin_right = 691.298
margin_bottom = 891.0
custom_fonts/font = ExtResource( 6 )
text = "Choose classes and press \"Confirm\" to add them to the Character"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Confirm" type="TextureButton" parent="ClassesModule"]
margin_left = 751.223
margin_top = 844.113
margin_right = 911.223
margin_bottom = 902.113
theme = ExtResource( 14 )
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 18 )
texture_hover = ExtResource( 17 )

[node name="Label" type="Label" parent="ClassesModule/Confirm"]
margin_right = 160.0
margin_bottom = 58.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 6 )
text = "Confirm"
align = 1
valign = 1

[node name="CheatRaceChange" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 207.377
margin_right = -932.623
margin_bottom = -250.0
custom_styles/panel = ExtResource( 33 )
script = ExtResource( 34 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="CheatRaceChange"]
self_modulate = Color( 0.180392, 0.054902, 0.713726, 1 )
show_behind_parent = true
margin_right = 780.0
margin_bottom = 830.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RaceSelection" type="Panel" parent="CheatRaceChange"]
margin_right = 780.0
margin_bottom = 830.0
custom_styles/panel = ExtResource( 21 )

[node name="ScrollContainer" type="ScrollContainer" parent="CheatRaceChange/RaceSelection"]
margin_left = 28.0
margin_top = 27.0
margin_right = 314.0
margin_bottom = 804.0
theme = ExtResource( 12 )

[node name="VBoxContainer" type="VBoxContainer" parent="CheatRaceChange/RaceSelection/ScrollContainer"]
margin_right = 286.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="CheatRaceChange/RaceSelection/ScrollContainer/VBoxContainer"]
visible = false
margin_right = 286.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
theme = ExtResource( 14 )
toggle_mode = true

[node name="TextureRect" type="TextureRect" parent="CheatRaceChange/RaceSelection"]
self_modulate = Color( 1, 1, 1, 0.407843 )
margin_left = 338.0
margin_top = 6.0
margin_right = 772.0
margin_bottom = 740.0
texture = ExtResource( 32 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="CheatRaceChange/RaceSelection"]
margin_left = 353.0
margin_top = 27.0
margin_right = 753.0
margin_bottom = 721.0
custom_colors/default_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/normal_font = ExtResource( 6 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmButton" type="Button" parent="CheatRaceChange"]
margin_left = 558.137
margin_top = 750.0
margin_right = 753.137
margin_bottom = 818.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_hover = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_colors/font_color_pressed = Color( 0.317647, 0.996078, 0.505882, 1 )
custom_fonts/font = ExtResource( 20 )
custom_styles/hover = ExtResource( 30 )
custom_styles/pressed = ExtResource( 23 )
custom_styles/normal = ExtResource( 31 )
text = "Confirm"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CancelButton" type="Button" parent="CheatRaceChange"]
margin_left = 344.0
margin_top = 750.0
margin_right = 539.0
margin_bottom = 818.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_colors/font_color_hover = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_colors/font_color_pressed = Color( 0.317647, 0.996078, 0.505882, 1 )
custom_fonts/font = ExtResource( 20 )
custom_styles/hover = ExtResource( 30 )
custom_styles/pressed = ExtResource( 23 )
custom_styles/normal = ExtResource( 31 )
text = "Cancel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddItem" type="Control" parent="."]
visible = false
margin_left = 281.61
margin_top = -50.0
margin_right = 891.61
margin_bottom = 875.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="AddItem"]
margin_right = 610.0
margin_bottom = 925.0
texture = ExtResource( 44 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="AddItem"]
margin_left = 56.0
margin_top = 102.0
margin_right = 571.0
margin_bottom = 611.0
theme = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="AddItem/ScrollContainer"]
margin_right = 500.0
margin_bottom = 52.0

[node name="Button" type="TextureButton" parent="AddItem/ScrollContainer/VBoxContainer"]
margin_right = 500.0
margin_bottom = 52.0
toggle_mode = true
texture_normal = ExtResource( 46 )
texture_pressed = ExtResource( 45 )
texture_hover = ExtResource( 40 )

[node name="Title" type="Label" parent="AddItem/ScrollContainer/VBoxContainer/Button"]
margin_left = 58.0
margin_top = 2.0
margin_right = 380.0
margin_bottom = 46.0
theme = ExtResource( 38 )
text = "Material"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="AddItem/ScrollContainer/VBoxContainer/Button"]
margin_left = 9.0
margin_top = 8.0
margin_right = 44.0
margin_bottom = 44.0
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemIcon" type="TextureRect" parent="AddItem"]
margin_left = 87.0
margin_top = 664.535
margin_right = 135.0
margin_bottom = 712.535
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NumberSelection3" type="Panel" parent="AddItem"]
margin_left = 50.0
margin_top = 624.0
margin_right = 562.0
margin_bottom = 814.0
custom_styles/panel = ExtResource( 21 )
script = ExtResource( 43 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="AddItem/NumberSelection3"]
margin_left = 38.0
margin_top = 95.0
margin_right = 568.0
margin_bottom = 121.0
rect_scale = Vector2( 0.8, 0.8 )
custom_icons/grabber_disabled = ExtResource( 41 )
custom_icons/grabber_highlight = ExtResource( 41 )
custom_icons/grabber = ExtResource( 41 )
custom_styles/slider = ExtResource( 42 )
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="AddItem/NumberSelection3"]
margin_left = 125.443
margin_top = 122.8
margin_right = 379.443
margin_bottom = 174.8
theme = ExtResource( 14 )
text = "Confirm"

[node name="ItemName" type="Label" parent="AddItem/NumberSelection3"]
margin_top = 2.0
margin_right = 511.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 6 )
align = 1
valign = 1

[node name="ItemAmount" type="Label" parent="AddItem/NumberSelection3"]
margin_left = 36.9699
margin_top = 56.0
margin_right = 78.9699
margin_bottom = 88.0
custom_fonts/font = ExtResource( 6 )
text = "x 1"
align = 1
valign = 1

[node name="Label" type="Label" parent="AddItem"]
margin_right = 610.0
margin_bottom = 80.0
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 39 )
text = "Add Items"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
